parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLAS
    ESPACIO
    INVALIDO
    PARENTDER
    PARENTIZQ

Grammar

Rule 0     S' -> Inicio
Rule 1     Inicio -> DEF MAIN APERTINICIO instruccion APERTFIN dec_proc dec_func
Rule 2     instruccion -> dec_variables instruccion
Rule 3     instruccion -> dec_if instruccion
Rule 4     instruccion -> dec_while instruccion
Rule 5     instruccion -> dec_for instruccion
Rule 6     instruccion -> dec_do_while instruccion
Rule 7     instruccion -> llamar_proc_func instruccion
Rule 8     instruccion -> dec_leer instruccion
Rule 9     instruccion -> dec_imprimir instruccion
Rule 10    instruccion -> empty
Rule 11    dec_variables -> T_STRING NOMBRE ASIGNACION TEXTO
Rule 12    dec_variables -> T_DOUBLE NOMBRE ASIGNACION NUMEROS
Rule 13    dec_variables -> T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NUMEROS
Rule 14    dec_variables -> T_DOUBLE NOMBRE ASIGNACION NOMBRE
Rule 15    dec_variables -> T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NUMEROS
Rule 16    dec_variables -> T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NOMBRE
Rule 17    dec_variables -> T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NOMBRE
Rule 18    dec_if -> IF opcion_not condicion APERTINICIO instruccion APERTFIN
Rule 19    dec_if -> IF opcion_not condicion APERTINICIO instruccion ELSE instruccion APERTFIN
Rule 20    dec_while -> WHILE opcion_not condicion APERTINICIO instruccion APERTFIN
Rule 21    dec_for -> FOR inicializacion COMA condicion COMA autoincremento APERTINICIO instruccion APERTFIN
Rule 22    inicializacion -> NOMBRE ASIGNACION NUMEROS
Rule 23    autoincremento -> NOMBRE MAS MAS
Rule 24    autoincremento -> NOMBRE MAS NUMEROS
Rule 25    dec_do_while -> DO APERTINICIO instruccion APERTFIN WHILE opcion_not condicion
Rule 26    dec_proc -> DEF NOMBRE recibir APERTINICIO instruccion APERTFIN
Rule 27    dec_proc -> empty
Rule 28    dec_func -> DEF NOMBRE recibir APERTINICIO instruccion RETURN NOMBRE APERTFIN
Rule 29    dec_func -> empty
Rule 30    recibir -> T_STRING NOMBRE
Rule 31    recibir -> T_DOUBLE NOMBRE
Rule 32    llamar_proc_func -> NOMBRE IGUALACION NOMBRE
Rule 33    dec_leer -> READ NOMBRE
Rule 34    dec_imprimir -> T_PRINT ASIGNACION expresion
Rule 35    dec_imprimir -> T_PRINT ASIGNACION expresion MAS expresion
Rule 36    operador_m -> MENOS
Rule 37    operador_m -> MAS
Rule 38    operador_m -> DIVISION
Rule 39    operador_m -> MULTIPLICACION
Rule 40    condicion -> expresion comparador expresion comparador condicion
Rule 41    condicion -> empty
Rule 42    expresion -> TEXTO
Rule 43    expresion -> NUMEROS
Rule 44    expresion -> NOMBRE
Rule 45    comparador -> IGUALACION
Rule 46    comparador -> DIFERENCIA
Rule 47    comparador -> MML
Rule 48    comparador -> MMR
Rule 49    comparador -> MMIL
Rule 50    comparador -> MMIR
Rule 51    comparador -> OPCI
Rule 52    comparador -> OPCII
Rule 53    comparador -> empty
Rule 54    opcion_not -> NEGACION
Rule 55    opcion_not -> empty
Rule 56    empty -> <empty>

Terminals, with rules where they appear

APERTFIN             : 1 18 19 20 21 25 26 28
APERTINICIO          : 1 18 19 20 21 25 26 28
ASIGNACION           : 11 12 13 14 15 16 17 22 34 35
COMA                 : 21 21
COMILLAS             : 
DEF                  : 1 26 28
DIFERENCIA           : 46
DIVISION             : 38
DO                   : 25
ELSE                 : 19
ESPACIO              : 
FOR                  : 21
IF                   : 18 19
IGUALACION           : 32 45
INVALIDO             : 
MAIN                 : 1
MAS                  : 23 23 24 35 37
MENOS                : 36
MMIL                 : 49
MMIR                 : 50
MML                  : 47
MMR                  : 48
MULTIPLICACION       : 39
NEGACION             : 54
NOMBRE               : 11 12 13 14 14 15 15 16 16 17 17 17 22 23 24 26 28 28 30 31 32 32 33 44
NUMEROS              : 12 13 13 15 16 22 24 43
OPCI                 : 51
OPCII                : 52
PARENTDER            : 
PARENTIZQ            : 
READ                 : 33
RETURN               : 28
TEXTO                : 11 42
T_DOUBLE             : 12 13 14 15 16 17 31
T_PRINT              : 34 35
T_STRING             : 11 30
WHILE                : 20 25
error                : 

Nonterminals, with rules where they appear

Inicio               : 0
autoincremento       : 21
comparador           : 40 40
condicion            : 18 19 20 21 25 40
dec_do_while         : 6
dec_for              : 5
dec_func             : 1
dec_if               : 3
dec_imprimir         : 9
dec_leer             : 8
dec_proc             : 1
dec_variables        : 2
dec_while            : 4
empty                : 10 27 29 41 53 55
expresion            : 34 35 35 40 40
inicializacion       : 21
instruccion          : 1 2 3 4 5 6 7 8 9 18 19 19 20 21 25 26 28
llamar_proc_func     : 7
opcion_not           : 18 19 20 25
operador_m           : 13 15 16 17
recibir              : 26 28

Parsing method: SLR

state 0

    (0) S' -> . Inicio
    (1) Inicio -> . DEF MAIN APERTINICIO instruccion APERTFIN dec_proc dec_func

    DEF             shift and go to state 2

    Inicio                         shift and go to state 1

state 1

    (0) S' -> Inicio .



state 2

    (1) Inicio -> DEF . MAIN APERTINICIO instruccion APERTFIN dec_proc dec_func

    MAIN            shift and go to state 3


state 3

    (1) Inicio -> DEF MAIN . APERTINICIO instruccion APERTFIN dec_proc dec_func

    APERTINICIO     shift and go to state 4


state 4

    (1) Inicio -> DEF MAIN APERTINICIO . instruccion APERTFIN dec_proc dec_func
    (2) instruccion -> . dec_variables instruccion
    (3) instruccion -> . dec_if instruccion
    (4) instruccion -> . dec_while instruccion
    (5) instruccion -> . dec_for instruccion
    (6) instruccion -> . dec_do_while instruccion
    (7) instruccion -> . llamar_proc_func instruccion
    (8) instruccion -> . dec_leer instruccion
    (9) instruccion -> . dec_imprimir instruccion
    (10) instruccion -> . empty
    (11) dec_variables -> . T_STRING NOMBRE ASIGNACION TEXTO
    (12) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS
    (13) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NUMEROS
    (14) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE
    (15) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NUMEROS
    (16) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NOMBRE
    (17) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NOMBRE
    (18) dec_if -> . IF opcion_not condicion APERTINICIO instruccion APERTFIN
    (19) dec_if -> . IF opcion_not condicion APERTINICIO instruccion ELSE instruccion APERTFIN
    (20) dec_while -> . WHILE opcion_not condicion APERTINICIO instruccion APERTFIN
    (21) dec_for -> . FOR inicializacion COMA condicion COMA autoincremento APERTINICIO instruccion APERTFIN
    (25) dec_do_while -> . DO APERTINICIO instruccion APERTFIN WHILE opcion_not condicion
    (32) llamar_proc_func -> . NOMBRE IGUALACION NOMBRE
    (33) dec_leer -> . READ NOMBRE
    (34) dec_imprimir -> . T_PRINT ASIGNACION expresion
    (35) dec_imprimir -> . T_PRINT ASIGNACION expresion MAS expresion
    (56) empty -> .

  ! shift/reduce conflict for T_STRING resolved as shift
  ! shift/reduce conflict for T_DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for NOMBRE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for T_PRINT resolved as shift
    T_STRING        shift and go to state 15
    T_DOUBLE        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    DO              shift and go to state 21
    NOMBRE          shift and go to state 16
    READ            shift and go to state 22
    T_PRINT         shift and go to state 23
    APERTFIN        reduce using rule 56 (empty -> .)
    DEF             reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)
    APERTINICIO     reduce using rule 56 (empty -> .)
    COMA            reduce using rule 56 (empty -> .)
    TEXTO           reduce using rule 56 (empty -> .)
    NUMEROS         reduce using rule 56 (empty -> .)
    ELSE            reduce using rule 56 (empty -> .)
    RETURN          reduce using rule 56 (empty -> .)

  ! T_STRING        [ reduce using rule 56 (empty -> .) ]
  ! T_DOUBLE        [ reduce using rule 56 (empty -> .) ]
  ! IF              [ reduce using rule 56 (empty -> .) ]
  ! WHILE           [ reduce using rule 56 (empty -> .) ]
  ! FOR             [ reduce using rule 56 (empty -> .) ]
  ! DO              [ reduce using rule 56 (empty -> .) ]
  ! NOMBRE          [ reduce using rule 56 (empty -> .) ]
  ! READ            [ reduce using rule 56 (empty -> .) ]
  ! T_PRINT         [ reduce using rule 56 (empty -> .) ]

    instruccion                    shift and go to state 5
    dec_variables                  shift and go to state 6
    dec_if                         shift and go to state 7
    dec_while                      shift and go to state 8
    dec_for                        shift and go to state 9
    dec_do_while                   shift and go to state 10
    llamar_proc_func               shift and go to state 11
    dec_leer                       shift and go to state 12
    dec_imprimir                   shift and go to state 13
    empty                          shift and go to state 14

state 5

    (1) Inicio -> DEF MAIN APERTINICIO instruccion . APERTFIN dec_proc dec_func

    APERTFIN        shift and go to state 24


state 6

    (2) instruccion -> dec_variables . instruccion
    (2) instruccion -> . dec_variables instruccion
    (3) instruccion -> . dec_if instruccion
    (4) instruccion -> . dec_while instruccion
    (5) instruccion -> . dec_for instruccion
    (6) instruccion -> . dec_do_while instruccion
    (7) instruccion -> . llamar_proc_func instruccion
    (8) instruccion -> . dec_leer instruccion
    (9) instruccion -> . dec_imprimir instruccion
    (10) instruccion -> . empty
    (11) dec_variables -> . T_STRING NOMBRE ASIGNACION TEXTO
    (12) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS
    (13) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NUMEROS
    (14) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE
    (15) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NUMEROS
    (16) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NOMBRE
    (17) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NOMBRE
    (18) dec_if -> . IF opcion_not condicion APERTINICIO instruccion APERTFIN
    (19) dec_if -> . IF opcion_not condicion APERTINICIO instruccion ELSE instruccion APERTFIN
    (20) dec_while -> . WHILE opcion_not condicion APERTINICIO instruccion APERTFIN
    (21) dec_for -> . FOR inicializacion COMA condicion COMA autoincremento APERTINICIO instruccion APERTFIN
    (25) dec_do_while -> . DO APERTINICIO instruccion APERTFIN WHILE opcion_not condicion
    (32) llamar_proc_func -> . NOMBRE IGUALACION NOMBRE
    (33) dec_leer -> . READ NOMBRE
    (34) dec_imprimir -> . T_PRINT ASIGNACION expresion
    (35) dec_imprimir -> . T_PRINT ASIGNACION expresion MAS expresion
    (56) empty -> .

  ! shift/reduce conflict for T_STRING resolved as shift
  ! shift/reduce conflict for T_DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for NOMBRE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for T_PRINT resolved as shift
    T_STRING        shift and go to state 15
    T_DOUBLE        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    DO              shift and go to state 21
    NOMBRE          shift and go to state 16
    READ            shift and go to state 22
    T_PRINT         shift and go to state 23
    APERTFIN        reduce using rule 56 (empty -> .)
    DEF             reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)
    APERTINICIO     reduce using rule 56 (empty -> .)
    COMA            reduce using rule 56 (empty -> .)
    TEXTO           reduce using rule 56 (empty -> .)
    NUMEROS         reduce using rule 56 (empty -> .)
    ELSE            reduce using rule 56 (empty -> .)
    RETURN          reduce using rule 56 (empty -> .)

  ! T_STRING        [ reduce using rule 56 (empty -> .) ]
  ! T_DOUBLE        [ reduce using rule 56 (empty -> .) ]
  ! IF              [ reduce using rule 56 (empty -> .) ]
  ! WHILE           [ reduce using rule 56 (empty -> .) ]
  ! FOR             [ reduce using rule 56 (empty -> .) ]
  ! DO              [ reduce using rule 56 (empty -> .) ]
  ! NOMBRE          [ reduce using rule 56 (empty -> .) ]
  ! READ            [ reduce using rule 56 (empty -> .) ]
  ! T_PRINT         [ reduce using rule 56 (empty -> .) ]

    dec_variables                  shift and go to state 6
    instruccion                    shift and go to state 25
    dec_if                         shift and go to state 7
    dec_while                      shift and go to state 8
    dec_for                        shift and go to state 9
    dec_do_while                   shift and go to state 10
    llamar_proc_func               shift and go to state 11
    dec_leer                       shift and go to state 12
    dec_imprimir                   shift and go to state 13
    empty                          shift and go to state 14

state 7

    (3) instruccion -> dec_if . instruccion
    (2) instruccion -> . dec_variables instruccion
    (3) instruccion -> . dec_if instruccion
    (4) instruccion -> . dec_while instruccion
    (5) instruccion -> . dec_for instruccion
    (6) instruccion -> . dec_do_while instruccion
    (7) instruccion -> . llamar_proc_func instruccion
    (8) instruccion -> . dec_leer instruccion
    (9) instruccion -> . dec_imprimir instruccion
    (10) instruccion -> . empty
    (11) dec_variables -> . T_STRING NOMBRE ASIGNACION TEXTO
    (12) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS
    (13) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NUMEROS
    (14) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE
    (15) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NUMEROS
    (16) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NOMBRE
    (17) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NOMBRE
    (18) dec_if -> . IF opcion_not condicion APERTINICIO instruccion APERTFIN
    (19) dec_if -> . IF opcion_not condicion APERTINICIO instruccion ELSE instruccion APERTFIN
    (20) dec_while -> . WHILE opcion_not condicion APERTINICIO instruccion APERTFIN
    (21) dec_for -> . FOR inicializacion COMA condicion COMA autoincremento APERTINICIO instruccion APERTFIN
    (25) dec_do_while -> . DO APERTINICIO instruccion APERTFIN WHILE opcion_not condicion
    (32) llamar_proc_func -> . NOMBRE IGUALACION NOMBRE
    (33) dec_leer -> . READ NOMBRE
    (34) dec_imprimir -> . T_PRINT ASIGNACION expresion
    (35) dec_imprimir -> . T_PRINT ASIGNACION expresion MAS expresion
    (56) empty -> .

  ! shift/reduce conflict for T_STRING resolved as shift
  ! shift/reduce conflict for T_DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for NOMBRE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for T_PRINT resolved as shift
    T_STRING        shift and go to state 15
    T_DOUBLE        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    DO              shift and go to state 21
    NOMBRE          shift and go to state 16
    READ            shift and go to state 22
    T_PRINT         shift and go to state 23
    APERTFIN        reduce using rule 56 (empty -> .)
    DEF             reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)
    APERTINICIO     reduce using rule 56 (empty -> .)
    COMA            reduce using rule 56 (empty -> .)
    TEXTO           reduce using rule 56 (empty -> .)
    NUMEROS         reduce using rule 56 (empty -> .)
    ELSE            reduce using rule 56 (empty -> .)
    RETURN          reduce using rule 56 (empty -> .)

  ! T_STRING        [ reduce using rule 56 (empty -> .) ]
  ! T_DOUBLE        [ reduce using rule 56 (empty -> .) ]
  ! IF              [ reduce using rule 56 (empty -> .) ]
  ! WHILE           [ reduce using rule 56 (empty -> .) ]
  ! FOR             [ reduce using rule 56 (empty -> .) ]
  ! DO              [ reduce using rule 56 (empty -> .) ]
  ! NOMBRE          [ reduce using rule 56 (empty -> .) ]
  ! READ            [ reduce using rule 56 (empty -> .) ]
  ! T_PRINT         [ reduce using rule 56 (empty -> .) ]

    dec_if                         shift and go to state 7
    instruccion                    shift and go to state 26
    dec_variables                  shift and go to state 6
    dec_while                      shift and go to state 8
    dec_for                        shift and go to state 9
    dec_do_while                   shift and go to state 10
    llamar_proc_func               shift and go to state 11
    dec_leer                       shift and go to state 12
    dec_imprimir                   shift and go to state 13
    empty                          shift and go to state 14

state 8

    (4) instruccion -> dec_while . instruccion
    (2) instruccion -> . dec_variables instruccion
    (3) instruccion -> . dec_if instruccion
    (4) instruccion -> . dec_while instruccion
    (5) instruccion -> . dec_for instruccion
    (6) instruccion -> . dec_do_while instruccion
    (7) instruccion -> . llamar_proc_func instruccion
    (8) instruccion -> . dec_leer instruccion
    (9) instruccion -> . dec_imprimir instruccion
    (10) instruccion -> . empty
    (11) dec_variables -> . T_STRING NOMBRE ASIGNACION TEXTO
    (12) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS
    (13) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NUMEROS
    (14) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE
    (15) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NUMEROS
    (16) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NUMEROS operador_m NOMBRE
    (17) dec_variables -> . T_DOUBLE NOMBRE ASIGNACION NOMBRE operador_m NOMBRE
    (18) dec_if -> . IF opcion_not condicion APERTINICIO instruccion APERTFIN
    (19) dec_if -> . IF opcion_not condicion APERTINICIO instruccion ELSE instruccion APERTFIN
    (20) dec_while -> . WHILE opcion_not condicion APERTINICIO instruccion APERTFIN
    (21) dec_for -> . FOR inicializacion COMA condicion COMA autoincremento APERTINICIO instruccion APERTFIN
    (25) dec_do_while -> . DO APERTINICIO instruccion APERTFIN WHILE opcion_not condicion
    (32) llamar_proc_func -> . NOMBRE IGUALACION NOMBRE
    (33) dec_leer -> . READ NOMBRE
    (34) dec_imprimir -> . T_PRINT ASIGNACION expresion
    (35) dec_imprimir -> . T_PRINT ASIGNACION expresion MAS expresion
    (56) empty -> .

  ! shift/reduce conflict for T_STRING resolved as shift
  ! shift/reduce conflict for T_DOUBLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for NOMBRE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for T_PRINT resolved as shift
    T_STRING        shift and go to state 15
    T_DOUBLE        shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    DO              shift and go to state 21
    NOMBRE          shift and go to state 16
    READ            shift and go to state 22
    T_PRINT         shift and go to state 23
    APERTFIN        reduce using rule 56 (empty -> .)
    DEF             reduce using rule 56 (empty -> .)
    $end            reduce using rule 56 (empty -> .)
    APERTINICIO     reduce using rule 56 (empty -> .)
    COMA            reduce using rule 56 (empty -> .)
    TEXTO           reduce using rule 56 (empty -> .)
    NUMEROS         reduce using rule 56 (empty -> .)
    ELSE            reduce using rule 56 (empty -> .)
    RETURN          reduce using rule 56 (empty -> .)

  ! T_STRING        [ reduce using rule 56 (empty -> .) ]
  ! T_DOUBLE        [ reduce using rule 56 (empty -> .) ]
  ! IF              [ reduce using rule 56 (empty -> .) ]
  ! WHILE           [ reduce using rule 56 (empty -> .) ]
  ! FOR             [ reduce using rule 56 (empty -> .) ]
  ! DO              [ reduce using rule 56 (empty -> .) ]
  ! NOMBRE          [ reduce using rule 56 (empty -> .) ]
  ! READ            [ reduce using rule 56 (empty -> .) ]
  ! T_PRINT         [ reduce using rule 56 (empty -> .) ]

    dec_while                      shift and go to state 8
    instruccion                    shift and go to state 27
    dec_variables                  shift and go to state 6
    dec_if                         shift and go to state 7
    dec_for                        shift and go to state 9
    dec_do_while                   shift and go to state 10
    llamar_proc_func               shift and go to state 11
    dec_leer                       shift and go to state 12
    dec_imprimir                   shift and go to state 13
    empty                          shift and go to state 14

state 9
